2014-02-27  Jeff Law  <law@redhat.com>

	PR rtl-optimization/52714
	* combine.c (try_combine): When splitting an unrecognized PARALLEL
	into two independent simple sets, if I3 is a jump, ensure the
	pattern we place into I3 is a (set (pc) ...)

2014-02-27  Mikael Pettersson  <mikpe@it.uu.se>
	    Jeff Law  <law@redhat.com>

	PR rtl-optimization/49847
	* cse.c (fold_rtx) Handle case where cc0 setter and cc0 user
	are in different blocks.
	* doc/tm.texi (Condition Code Status): Update documention for
	relative locations of cc0-setter and cc0-user.

2014-02-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/59222
	* lra.c (lra_emit_add): Check SUBREG too.

2014-02-27  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c (m68k_option_override): Disable
	-flive-range-shrinkage for classic m68k.
	(m68k_override_options_after_change): Likewise.

2014-02-27  Marek Polacek  <polacek@redhat.com>

	PR middle-end/59223
	* tree-ssa-uninit.c (gate_warn_uninitialized): Run the pass even for
	-Wmaybe-uninitialized.

2014-02-27  Alan Modra  <amodra@gmail.com>

	PR target/57936
	* reload1.c (emit_input_reload_insns): When reload_override_in,
	set old to rl->in_reg when rl->in_reg is a subreg.

2014-02-26  Richard Biener  <rguenther@suse.de>

	PR bootstrap/60343
	* lra-assigns.c (spill_for): Avoid mixed-sign comparison.

2014-02-25  Ilya Tocar  <ilya.tocar@intel.com>

	* common/config/i386/predicates.md (const1256_operand): Remove.
	(const2356_operand): New.
	(const_1_to_2_operand): Remove.
	* config/i386/sse.md (avx512pf_gatherpf<mode>sf): Change hint value.
	(*avx512pf_gatherpf<mode>sf_mask): Ditto.
	(*avx512pf_gatherpf<mode>sf): Ditto.
	(avx512pf_gatherpf<mode>df): Ditto.
	(*avx512pf_gatherpf<mode>df_mask): Ditto.
	(*avx512pf_gatherpf<mode>df): Ditto.
	(avx512pf_scatterpf<mode>sf): Ditto.
	(*avx512pf_scatterpf<mode>sf_mask): Ditto.
	(*avx512pf_scatterpf<mode>sf): Ditto.
	(avx512pf_scatterpf<mode>df): Ditto.
	(*avx512pf_scatterpf<mode>df_mask): Ditto.